# barter-rs

./: .gitignore  ANALYSIS_COMPLETE.txt  ANALYSIS_INDEX.md  ARCHITECTURE_COMPARISON.md  COMPARATIVE_ANALYSIS.md  Cargo.toml  DEBUGGING_GUIDE.md  EXECUTIVE_SUMMARY.md  FORENSIC_ANALYSIS.md  FORENSIC_EVIDENCE_TRADE_FAILURE.md  FORENSIC_INVESTIGATION_INDEX.md  HANDOFF_PROMPT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_DIFFS.md  IMPLEMENTATION_PLAN_ENHANCED.md  INVESTIGATION_SUMMARY.md  KLINE_SYNC_NOTES.md  L1_THROTTLE_NOTES.md  L2_SEPARATION_IMPLEMENTATION_PLAN.md  MESSAGE_FLOW_ANALYSIS.md  MESSAGE_FLOW_SUMMARY.txt  PARSER_VULNERABILITY_ANALYSIS.md  QUICK_DIAGNOSTIC_GUIDE.md  REFACTOR_VALIDATION_REPORT.md  SURGICAL_FIX_PLAN.md  SYSTEM_STATUS.md  TUI_ENHANCEMENT_SPEC.md  TUI_REFACTOR_PLAN.md  TUI_TESTING_GUIDE.md  VALIDATION_RESULTS.md  VALIDATION_STEPS.md  WHALE_INVESTIGATION_REPORT.md  WHALE_QUICK_REFERENCE.md  WHALE_TECHNICAL_DEEP_DIVE.md  analyze_granular_trades.sh  cargo_monitor.sh  run_scalper.sh  run_tui.sh  start_realtime.sh  stop_realtime.sh  (+1 more)
barter-data/: Cargo.toml
barter-data-server/: Cargo.toml  README.md
barter-data-server/src/: main.rs
barter-data-tui/: Cargo.toml  DESIGN.md  README.md
barter-data-tui/src/: main.rs
barter-data/examples/: dynamic_multi_stream_multi_exchange.rs  liquidation_stream.rs  realtime_trades.rs
barter-data/src/: error.rs  event.rs  lib.rs
barter-data/src/exchange/binance/: channel.rs  mod.rs  trade.rs
barter-data/src/exchange/binance/futures/: l2.rs  mod.rs
barter-data/src/exchange/bybit/: channel.rs  liquidation.rs  message.rs  mod.rs  open_interest.rs  trade.rs
barter-data/src/exchange/bybit/book/: l1.rs  l2.rs  mod.rs
barter-data/src/exchange/okx/: channel.rs  liquidation.rs  mod.rs  open_interest.rs  trade.rs
barter-data/src/exchange/okx/book/: l2.rs  mod.rs
barter-data/src/streams/: mod.rs  timeout.rs
barter-data/src/streams/builder/dynamic/: indexed.rs  mod.rs
barter-data/src/subscription/: cvd.rs  mod.rs  open_interest.rs
barter-data/src/transformer/: cvd.rs  mod.rs
barter-integration/src/: error.rs
barter-trading-tuis/: Cargo.toml  ENV.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README_MARKET_MICROSTRUCTURE.md
barter-trading-tuis/src/: lib.rs
barter-trading-tuis/src/shared/: aggregation.rs  mod.rs  state.rs  types.rs  websocket.rs
barter-trading-tuis/src/shared/trad_markets/: aggregator.rs  calc.rs  feed.rs  mod.rs  state.rs  widget.rs
docs/: ES_BTC_CORRELATION_SPEC.md  L2_LATENCY_REFACTOR_PLAN.md  wss_testing.md
