[package]
name = "barter-data-tui"
version = "0.1.0"
edition = "2024"
authors = ["JustAStream <justastream.code@gmail.com>"]
license = "MIT"
description = "Terminal UI for visualizing real-time market data from barter-data-server"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread", "net", "time"] }
futures = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }

# SerDe
serde = { workspace = true }
serde_json = { workspace = true }

# Misc
chrono = { workspace = true }
rust_decimal = "1.36"
